feat: enhance SEO with new og-image, manifest, and updated metadata

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="theme-color" content="#030712" />
+  <link rel="manifest" href="/manifest.json" />
 
   <!-- Primary Title - Optimized for Local Dominance -->
   <title>Aditya Dhiman | Software Developer & Full-Stack Engineer | Kanpur, Lucknow, UP</title>
@@ -17,7 +19,7 @@
   <meta name="description"
     content="Official Portfolio of Aditya Dhiman, the top Full-Stack Developer & Software Engineer in Kanpur, Lucknow, and Unnao (Uttar Pradesh). Specializing in React, Node.js, AI Solutions, and Modern Web Design. Available for freelance and full-time software engineering roles." />
   <meta name="keywords"
-    content="Aditya Dhiman, Aditya Dhiman Kanpur, Best Software Developer in Kanpur, Best Web Developer in Lucknow, Website Developer Unnao, Software Engineer Uttar Pradesh, Full Stack Developer Kanpur, React Developer Lucknow, Node.js Expert India, Freelance Web Developer UP, CSJMU Topper, Aditya Dhiman Portfolio, MCA Student CSJMU, AI Developer Kanpur, App Developer Unnao, JavaScript, TypeScript, Python, Java, C++, Software Engineering Services, aditya dhiman, aditya diman, aditya deeman, aditya dhiman lucknow, kanpur developer, lucknow developer, unnao developer, web devloper, software enginer, react js developer, node js developer, best coder in kanpur, top developer up, aditya dhiman website" />
+    content="Aditya Dhiman, Aditya Dhiman Kanpur, Best Software Developer in Kanpur, Best Web Developer in Lucknow, Website Developer Unnao, Software Engineer Uttar Pradesh, Full Stack Developer Kanpur, React Developer Lucknow, Node.js Expert India, Freelance Web Developer UP, CSJMU Topper, Aditya Dhiman Portfolio, MCA Student CSJMU, AI Developer Kanpur, App Developer Unnao, JavaScript, TypeScript, Python, Java, C++, Software Engineering Services, aditya dhiman, aditya diman, aditya deeman, aditya dhiman lucknow, kanpur developer, lucknow developer, unnao developer, web devloper, software enginer, react js developer, node js developer, best coder in kanpur, top developer up, aditya dhiman website, SplitNGo Case Study, Modern Portfolio" />
   <meta name="author" content="Aditya Dhiman" />
   <meta name="robots" content="index, follow, max-image-preview:large" />
   <meta name="language" content="English" />
